<resources>
    <string name="app_name">00000033942-Maurice-calcu</string>
    <string name="angka1">Masukan Angka</string>
    <string name="angka2">Masukan Angka</string>
    <string name="btnTambah">+</string>
    <string name="btnKurang">-</string>
    <string name="btnKali">X</string>
    <string name="btnBagi">/</string>
    <string name="hasil">Hasil :</string>
    <string name="btnCE">CE</string>
    <string name="btnC">C</string>
    <string name="btnBack">bs</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnNegative">+/-</string>
    <string name="btnDecimal">.</string>
    <string name="btnResult">=</string>
    <string name="inputPlaceH">0</string>
</resources>