<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    entry-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f5f5f5">
        <TextView
            android:id="@+id/entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="4dp"
            android:gravity="end|bottom"
            android:textStyle="bold"
            android:hint="" />
    </LinearLayout>
<!--    input-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f5f5f5">
        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="4dp"
            android:gravity="bottom|end"
            android:textStyle="bold"
            android:text=""
            android:hint=""/>
    </LinearLayout>
<!--    button-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<!--        1-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:weightSum="4">
            <Button
                android:id="@+id/btnCE"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"
                
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"

                android:text="@string/btnCE"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnC"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnC"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnBack"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"

                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/btnBack"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnBagi"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"


                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnBagi"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
<!--     2-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:weightSum="4">
            <Button
                android:id="@+id/btn7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn7"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn8"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn8"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn9"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnKali"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnKali"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
<!--3-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:weightSum="4">
            <Button
                android:id="@+id/btn4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn4"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn5"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnKurang"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnKurang"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
<!--        4-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:weightSum="4">
            <Button
                android:id="@+id/btn1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn2"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn3"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnTambah"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnTambah"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
<!--        5-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:weightSum="4">
            <Button
                android:id="@+id/btnNegative"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnNegative"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btn0"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnDecimal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"

                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnDecimal"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnResult"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#f2f0ee"
                
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/btnResult"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>
</LinearLayout>